--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,15 @@
 			text-overflow: ellipsis;
 		}
 
+		.username-clickable:hover {
+			cursor: pointer;
+			text-decoration: underline;
+		}
+
+		.avatar-clickable:hover {
+			cursor: pointer;
+		}
+
 		.username-cell {
 			max-width: 20ch;
 		}
@@ -82,10 +91,47 @@
 		.past-hour-by-rank-col {
 			white-space: nowrap;
 		}
+
+		.no-select {
+			user-select: none;
+		}
+
+		.heatmap-container {
+			display: grid;
+			grid-template-columns: repeat(24, 1fr);
+			gap: 0;
+		}
+
+		.heatmap-item {
+			border: 1px black solid;
+			aspect-ratio: 1;
+			text-align: center;
+
+			display: inline-flex;
+			align-items: center;
+			justify-content: center;
+			font-size: min(2.3vw, 12px)
+		}
+
+		.heatmap-hour-hint {
+			position: relative;
+			left: -2px;
+			font-size: 6px;
+		}
+
+		@media (min-width: 992px) {
+			.heatmap-item {
+				font-size: 16px;
+			}
+			.heatmap-hour-hint {
+				font-size: 10px;
+			}
+		}
 	</style>
 </head>
 <body class="d-flex flex-column justify-content-center align-items-center" style="min-height: 100%;">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 	<script src="/assets/flipdown.min.js"></script>
 	<script src="/assets/countdown.min.js"></script>
 
@@ -607,6 +653,56 @@
 		</div>
 	</div>
 
+	<div class="modal" id="eventProfileModal" tabindex="-1" aria-labelledby="eventProfileModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h1 class="modal-title fw-normal fs-5" id="eventProfileModalLabel">...</h1>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body d-flex flex-column gap-3">
+					<div>
+						<h4>Current Team</h4>
+						<div id="eventProfileDeck" class="d-flex gap-2 no-select mb-3"></div>
+						<div>
+							<details id="eventProfileTalentDetails">
+								<summary>Talent: <span id="eventProfileTalentLb" class="fw-bold"></span></summary>
+								<p id="eventProfileBaseTalentLb" class="mb-0">Base Talent:</p>
+								<p id="eventProfileItemTalentLb" class="mb-0">Decoration Bonus:</p>
+								<p id="eventProfileCRTalentLb" class="mb-0">Character Rank Bonus:</p>
+								<p id="eventProfileTitleTalentLb" class="mb-0">Title Bonus:</p>
+							</details>
+						</div>
+					</div>
+					<div>
+						<h4>Recent Games</h4>
+						<div style="height: 6rem; width: 100%;">
+							<canvas id="recentGamesChart"></canvas>
+						</div>
+					</div>
+					<div>
+						<h4>Heatmap</h4>
+						<div id="heatmapContainer" class="heatmap-container"></div>
+						<!-- <div id="heatmapPlaceholder" class="placeholder-glow" style="height: min(300px, 30vw);">
+							<span class="placeholder w-100 h-100"></span>
+						</div> -->
+						<div class="d-flex gap-2 justify-content-center mt-2">
+							<label class="form-check-label" for="heatmapTimezoneCb">EST (NeneRobo)</label>
+							<div class="form-check form-switch">
+								<input class="form-check-input" type="checkbox" role="switch" id="heatmapTimezoneCb">
+								<label class="form-check-label" for="heatmapTimezoneCb">Local timezone</label>
+							</div>
+						</div>
+					</div>
+					<div>
+						<h4>Points Graph</h4>
+						<canvas id="pointsGraph"></canvas>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<footer class="py-3">
 		<span>Contact: <a id="contactBtn" href="javascript:void(0)" data-bs-toggle="modal" data-bs-target="#contactModal">Show</a></span>
 	</footer>
@@ -751,6 +847,36 @@
 			return json
 		}
 
+		async function getUserEventProfile(hash) {
+			const res = await fetch(`/api/event-profiles/${hash}`)
+			if(!res.ok) {
+				throw new Error("getUserEventProfile() failed: " + res.status)
+			}
+
+			const json = await res.json()
+			return json
+		}
+
+		async function getUserEventStats(hash) {
+			const res = await fetch(`/api/event-stats/${hash}`)
+			if(!res.ok) {
+				throw new Error("getUserEventStats() failed: " + res.status)
+			}
+
+			const json = await res.json()
+			return json
+		}
+
+		async function getCutoffStats(cutoff) {
+			const res = await fetch(`/api/event-cutoff-stats/${cutoff}`)
+			if(!res.ok) {
+				throw new Error("getCutoffStats() failed: " + res.status)
+			}
+
+			const json = await res.json()
+			return json
+		}
+
 		const announceQueue = []
 		let announceDebounce = false
 		function queueAnnouncement(message) {
@@ -789,6 +915,7 @@
 			announcementLoop()
 		})
 
+		let currentEvent
 		let timerStarted = false
 		let nextTimerStarted = false
 		let lastLbUpdate
@@ -824,7 +951,7 @@
 				toggleIssuesBanner(false)
 			}
 			
-			const eventData = data.event
+			const eventData = currentEvent = data.event
 			document.getElementById("eventLogoPlaceholder").style.display = "none"
 			document.getElementById("eventLogo").src = `assets/${eventData.name_key}.png`
 			document.getElementById("eventLogo").alt = `${eventData.name} event logo`
@@ -1019,6 +1146,17 @@
 					leaderImg.width = 38
 					leaderImg.height = 38
 					leaderImg.alt = "Leader Card"
+
+					if(slot.hash) {
+						leaderImg.classList.add("avatar-clickable")
+						leaderImg.addEventListener("click", async function(event) {
+							event.preventDefault()
+							event.stopPropagation()
+							new bootstrap.Modal("#eventProfileModal").show()
+							loadEventProfileModal(slot.hash, slot.rank)
+						})
+					}
+
 					nameCellDiv.appendChild(leaderImg)
 				}
 
@@ -1034,6 +1172,16 @@
 				const nameLabel = document.createElement("span")
 				nameLabel.setAttribute("class", "username-label")
 				nameLabel.textContent = nameLabel.title = removeTMPTags(slot.name)
+
+				if(slot.hash) {
+					nameLabel.classList.add("username-clickable")
+					nameLabel.addEventListener("click", async function(event) {
+						event.preventDefault()
+						event.stopPropagation()
+						new bootstrap.Modal("#eventProfileModal").show()
+						loadEventProfileModal(slot.hash, slot.rank)
+					})
+				}
 				nameCellDiv.appendChild(nameLabel)
 				nameCell.appendChild(nameCellDiv)
 
@@ -1101,6 +1249,324 @@
 			if(scrollTo) {
 				scrollTo.scrollIntoView({behavior: "smooth", block: "center"})
 			}
+		}
+
+		let lastCharts = []
+		async function loadEventProfileModal(hash, cutoff) {
+			// Clear old values
+			eventProfileDeck.innerHTML = ""
+			document.getElementById("eventProfileTalentDetails").open = false
+			document.getElementById("eventProfileModalLabel").textContent = "..."
+			document.getElementById("eventProfileTalentLb").textContent = ""
+			document.getElementById("eventProfileBaseTalentLb").textContent = "Base Talent:"
+			document.getElementById("eventProfileItemTalentLb").textContent = "Decoration Bonus:"
+			document.getElementById("eventProfileCRTalentLb").textContent = "Character Rank Bonus:"
+			document.getElementById("eventProfileTitleTalentLb").textContent = "Title Bonus:"
+			lastCharts.forEach(x => {
+				x.clear()
+				x.destroy()
+			})
+			lastCharts = []
+			document.getElementById("heatmapContainer").innerHTML = ""
+			// document.getElementById("heatmapPlaceholder").style.display = ""
+
+			if(localStorage.getItem("heatmapTimezone") === "true") {
+				document.getElementById("heatmapTimezoneCb").checked = true
+			}
+
+			const profile = await getUserEventProfile(hash)
+			const statsPromise = getUserEventStats(hash)
+			const cutoffPromise = getCutoffStats(cutoff)
+
+			// Render name
+			document.getElementById("eventProfileModalLabel").textContent = removeTMPTags(profile.name)
+
+			// Render cards
+			for(const [idx, card] of profile.cards.entries()) {
+				const img = document.createElement("img")
+				img.style.minWidth = "80px"
+				img.style.width = "100%"
+				img.style.maxWidth = "128px"
+				img.src = `/images/card/deck/${card.id}.png?level=${card.level}&mastery=${card.mastery}&trained=${card.trained}&image=${card.image}&slot=${idx}`
+				img.alt = img.title = card.description
+
+				const a = document.createElement("a")
+				a.href = `https://sekai.best/card/${card.id}`
+				a.target = "_blank"
+				a.appendChild(img)
+
+				const div = document.createElement("div")
+				div.style.aspectRatio = "312/510"
+				div.style.maxWidth = "20%"
+				div.appendChild(a)
+
+				document.getElementById("eventProfileDeck").appendChild(div)
+			}
+
+			// Render talent
+			document.getElementById("eventProfileTalentLb").textContent = formatNumber(profile.talent.total_talent)
+			document.getElementById("eventProfileBaseTalentLb").textContent = `Base Talent: ${formatNumber(profile.talent.basic_talent.toLocaleString())}`
+			document.getElementById("eventProfileItemTalentLb").textContent = `Decoration Bonus: ${formatNumber(profile.talent.area_item_bonus.toLocaleString())}`
+			document.getElementById("eventProfileCRTalentLb").textContent = `Character Rank Bonus: ${formatNumber(profile.talent.character_rank_bonus.toLocaleString())}`
+			document.getElementById("eventProfileTitleTalentLb").textContent = `Title Bonus: ${formatNumber(profile.talent.honor_bonus.toLocaleString())}`
+
+			const stats = await statsPromise
+			stats.timeline.forEach(x => x.timestamp = new Date(x.timestamp))
+
+			// Render recent games
+			const hourAgo = new Date(Date.now() - 3600 * 1000)
+			const recentGames = []
+			for(const [idx, dataPoint] of stats.timeline.entries()) {
+				if(dataPoint.timestamp >= hourAgo && (recentGames.length === 0 || (stats.timeline[idx-1]?.score || 0) < dataPoint.score)) {
+					recentGames.push({
+						timestamp: dataPoint.timestamp,
+						delta: dataPoint.score - (stats.timeline[idx-1]?.score || 0)
+					})
+				}
+			}
+
+			lastCharts.push(new Chart(document.getElementById("recentGamesChart"), {
+				type: "scatter",
+				data: {
+					labels: [0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60],
+					datasets: [{
+						data: recentGames.map(x => ({
+							x: Math.floor((x.timestamp.getTime() - hourAgo.getTime())/1000/60),
+							y: 1
+						}))
+					}]
+				},
+				options: {
+					interaction: {
+						intersect: false,
+						mode: "nearest",
+						axis: "x"
+					},
+					maintainAspectRatio: false,
+					animation: false,
+					scales: {
+						x: {
+							min: 0,
+							max: 60,
+							grid: {
+								display: false
+							},
+							ticks: {
+								callback: function(value, index, values) {
+									if(value === 60) {
+										return "Now"
+									}
+									return new Date(hourAgo.getTime() + value * 60 * 1000).toLocaleTimeString(undefined, {hour: "numeric", minute: "numeric"})
+								}
+							}
+						},
+						y: {
+							min: 0,
+							max: 2,
+							grid: {
+								display: false
+							},
+							ticks: {
+								display: false
+							}
+						}
+					},
+					plugins: {
+						legend: {
+							display: false
+						},
+						tooltip: {
+							callbacks: {
+								title: (data) => `${data.length} game${data.length !== 1 ? "s" : ""} played`,
+								label: (data) => `+${formatNumber(recentGames[data.dataIndex].delta)} points`,
+								// afterLabel: (data) => `at ${recentGames[data.dataIndex].timestamp.toLocaleTimeString()}`
+							}
+						}
+					}
+				}
+			}))
+
+			// Render heatmap
+			document.getElementById("heatmapTimezoneCb").onchange = function() {
+				if(this.checked) {
+					renderHeatmap(new Date(currentEvent.starts_at), new Date(currentEvent.ends_at), new Date().getTimezoneOffset()/60, stats.timeline)
+				} else {
+					renderHeatmap(new Date(currentEvent.starts_at), new Date(currentEvent.ends_at), 4, stats.timeline)
+				}
+
+				localStorage.setItem("heatmapTimezone", this.checked.toString())
+			}
+			if(localStorage.getItem("heatmapTimezone") === "true") {
+				renderHeatmap(new Date(currentEvent.starts_at), new Date(currentEvent.ends_at), new Date().getTimezoneOffset()/60, stats.timeline)
+			} else {
+				renderHeatmap(new Date(currentEvent.starts_at), new Date(currentEvent.ends_at), 4, stats.timeline)
+			}
+
+			const cutoffStats = await cutoffPromise
+			cutoffStats.timeline.forEach(x => x.timestamp = new Date(x.timestamp))
+
+			// Render points graph
+			const recentGamesByDelta = stats.timeline.map(x => ({
+				x: Math.floor((x.timestamp.getTime() - new Date(currentEvent.starts_at).getTime())/60000),
+				y: x.score
+			}))
+			const cutoffByDelta = cutoffStats.timeline.map(x => ({
+				x: Math.floor((x.timestamp.getTime() - new Date(currentEvent.starts_at).getTime())/60000),
+				y: x.score
+			}))
+			const minX = 0
+			const maxX = Math.max(...recentGamesByDelta.map(x => x.x))
+			const step = 1
+			const labels = []
+			for(let i=minX;i<=maxX;i+=step) {
+				labels.push(i)
+			}
+
+			for(const [idx, val] of labels.entries()) {
+				if(!recentGamesByDelta[idx] || recentGamesByDelta[idx].x !== val) {
+					recentGamesByDelta.splice(idx, 0, {x: val, y: null})
+				}
+				if(!cutoffByDelta[idx] || cutoffByDelta[idx].x !== val) {
+					cutoffByDelta.splice(idx, 0, {x: val, y: null})
+				}
+			}
+
+			lastCharts.push(new Chart(document.getElementById("pointsGraph"), {
+				type: "line",
+				data: {
+					labels: labels,
+					datasets: [
+						{
+							label: removeTMPTags(profile.name),
+							data: recentGamesByDelta.map(x => x.y),
+							spanGaps: true,
+							pointRadius: 0
+						},
+						{
+							label: `T${cutoff} Cutoff`,
+							data: cutoffByDelta.map(x => x.y),
+							spanGaps: true,
+							pointRadius: 0
+						}
+					]
+				},
+				options: {
+					interaction: {
+						intersect: false,
+						mode: "nearest",
+						axis: "x"
+					},
+					aspectRatio: Math.max(1, window.screen.availWidth/window.screen.availHeight),
+					scales: {
+						x: {
+							title: {
+								display: true,
+								text: "Event Time"
+							},
+							ticks: {
+								callback: function(value, index, values) {
+									const val = parseInt(this.getLabelForValue(value))
+									if(val % 60 === 0) {
+										if(val % 1440 === 0 && val > 0) {
+											return `${val/1440}d`
+										} else if(val >= 1440) {
+											const days = Math.floor(val/1440)
+											const minutes = val%1440
+											return `${days}d ${minutes/60}h`
+										} else {
+											return `${val/60}h`
+										}
+									} else if(val % 5 === 0) {
+										const hours = Math.floor(val/60)
+										const minutes = val%60
+										if(hours > 0) {
+											return `${hours}h ${minutes}min`
+										} else {
+											return `${minutes} min`
+										}
+									}
+								}
+							}
+						},
+						y: {
+							title: {
+								display: true,
+								text: "Event Points"
+							}
+						}
+					},
+					plugins: {
+						tooltip: {
+							callbacks: {
+								title: function(tooltipItem, data) {
+									let val = parseInt(tooltipItem[0].label)
+									const days = Math.floor(val/1440)
+									val %= 1440
+									const hours = Math.floor(val/60)
+									val %= 60
+									const minutes = val
+
+									const parts = []
+									if(days) {
+										parts.push(`${days} days`)
+									}
+									if(hours) {
+										parts.push(`${hours} hours`)
+									}
+									if(minutes) {
+										parts.push(`${minutes} minutes`)
+									}
+									
+									return parts.join(", ")
+								}
+							}
+						}
+					}
+				}
+			}))
+		}
+
+		function renderHeatmap(startDate, endDate, tzOffset, timeline) {
+			document.getElementById("heatmapContainer").innerHTML = ""
+
+			const colors = ["#301934", "#462a57", "#5b3b79", "#714d9c", "#7c59ad", "#8263b3", "#876db9", "#8576bd", "#6c7ebe", "#5287bf", "#398fc0", "#4396c4", "#519ec8", "#60a5cd", "#70acd1", "#83b2d4", "#96b8d8", "#a8bedb", "#c6cce3", "#d2d2e7", "#dbd8ea", "#e4dded", "#c2cbe2", "#e7dfee", "#eee0ee", "#f3dce8", "#f7d8e2", "#fcd4dc", "#f0dfeb", "#f4dbe6", "#f8d8e1", "#fcd4dc"]
+			const days = []
+			const dt = new Date(startDate.getTime())
+			dt.setUTCHours(tzOffset,0,0,0)
+			for(;dt<=new Date(endDate.getTime());dt.setUTCDate(dt.getUTCDate()+1)) {
+				if(dt.getTime() - startDate.getTime() === -86400000) continue // prevent blank days
+				days.push(new Date(dt))
+			}
+			for(let i=0;i<24;i++) {
+				const span = document.createElement("span")
+				span.classList.add("heatmap-hour-hint", "text-white-50")
+				span.textContent = i
+				document.getElementById("heatmapContainer").appendChild(span)
+			}
+			for(const day of days) {
+				for(let i=0;i<24;i++) {
+					const dateAt = new Date(day.getTime() + i * 3600 * 1000)
+					const dateIn1h = new Date(day.getTime() + (i + 1) * 3600 * 1000)
+
+					if(dateAt.getTime() > Date.now()) {
+						continue
+					}
+
+					const span = document.createElement("span")
+					span.classList.add("heatmap-item")
+					const eventStartTime = new Date(currentEvent.starts_at)
+					const eventEndTime = new Date(currentEvent.ends_at)
+					if(dateAt.getTime() >= eventStartTime.getTime() && dateAt.getTime() < eventEndTime && dateAt.getTime() <= Date.now()) {
+						const amountOfGames = timeline.filter(x => x.timestamp.getTime() >= dateAt.getTime() && x.timestamp.getTime() < dateIn1h.getTime()).length
+						span.textContent = amountOfGames
+						span.style.backgroundColor = colors[amountOfGames]
+						span.style.color = amountOfGames === 0 ? "#ffffff": "#000000"
+					}
+					document.getElementById("heatmapContainer").appendChild(span)
+				}
+			}
+
+			// document.getElementById("heatmapPlaceholder").style.display = "none"
 		}
 
 		if(localStorage.getItem("showCCAnnounce") === "false") {
