tweak(heatmap): colors

--- a/public/index.html
+++ b/public/index.html
@@ -1529,7 +1529,7 @@
 		function renderHeatmap(startDate, endDate, tzOffset, timeline) {
 			document.getElementById("heatmapContainer").innerHTML = ""
 
-			const colors = ["#301934", "#462a57", "#5b3b79", "#714d9c", "#7c59ad", "#8263b3", "#876db9", "#8576bd", "#6c7ebe", "#5287bf", "#398fc0", "#4396c4", "#519ec8", "#60a5cd", "#70acd1", "#83b2d4", "#96b8d8", "#a8bedb", "#c6cce3", "#d2d2e7", "#dbd8ea", "#e4dded", "#c2cbe2", "#e7dfee", "#eee0ee", "#f3dce8", "#f7d8e2", "#fcd4dc", "#f0dfeb", "#f4dbe6", "#f8d8e1", "#fcd4dc"]
+			const colors = ["#321b37", "#3c2243", "#46284f", "#4f2f5b", "#573567", "#5f3c72", "#67427d", "#6e4989", "#745095", "#7956a1", "#7e5dae", "#766ab9", "#6b78bf", "#5d85c2", "#4d91c1", "#5598c4", "#5e9ec7", "#68a4cb", "#71a9cf", "#79afd2", "#88b3d6", "#95b7d9", "#a2bbdb", "#adbfdd", "#b8c4de", "#c6c6e3", "#d6c8e5", "#e4cae4", "#f0cee0", "#fad3db"]
 			const days = []
 			const dt = new Date(startDate.getTime())
 			dt.setUTCHours(tzOffset,0,0,0)
