--- a/public/index.html
+++ b/public/index.html
@@ -1440,10 +1440,7 @@
 							label: removeTMPTags(profile.name),
 							data: recentGamesByDelta.map(x => x.y),
 							spanGaps: true,
-							pointRadius: 0,
-							segment: {
-								borderDash: ctx => ctx.p0.skip || ctx.p1.skip ? [6,6] : undefined
-							}
+							pointRadius: 0
 						},
 						{
 							label: `T${cutoff} Cutoff`,
