add beta disclaimer

--- a/public/index.html
+++ b/public/index.html
@@ -698,6 +698,10 @@
 						<h4>Points Graph</h4>
 						<canvas id="pointsGraph"></canvas>
 					</div>
+					<hr>
+					<div class="d-flex justify-content-center">
+						<p>This feature is in beta. Report any bugs or wrong data to amia.</p>
+					</div>
 				</div>
 			</div>
 		</div>
