tweak: hide cc announcements toggle for time being

--- a/public/index.html
+++ b/public/index.html
@@ -647,7 +647,7 @@
 			<input class="form-check-input" type="checkbox" role="switch" id="compactModeCb">
 			<label class="form-check-label" for="compactModeCb">Compact Mode</label>
 		</div>
-		<div class="form-check form-switch">
+		<div class="form-check form-switch d-none">
 			<input class="form-check-input" type="checkbox" role="switch" id="showCCAnnounceCb" checked>
 			<label class="form-check-label" for="showCCAnnounceCb">Show Cheerful Carnival sliding messages</label>
 		</div>
