--- a/public/titles/index.html
+++ b/public/titles/index.html
@@ -127,6 +127,8 @@
 	</style>
 </head>
 <body class="d-flex flex-column justify-content-center align-items-center" style="min-height: 100%;">
+	<script src="/assets/updater.js"></script>
+
 	<div class="row mt-5 w-100 justify-content-center">
 		<div class="select-container col-md-6 col-10 px-0 mb-4">
 			<div class="select-header" id="selectHeader">
