--- a/public/wl-graph/index.html
+++ b/public/wl-graph/index.html
@@ -10,6 +10,7 @@
 <body class="d-flex flex-column justify-content-center align-items-center" style="min-height: 100%;">
 	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8"></script>
+	<script src="/assets/updater.js"></script>
 
 	<div id="loadingSpinner" class="spinner-border" style="width: 6rem; height: 6rem;" role="status">
 		<span class="visually-hidden">Loading...</span>
