--- a/public/index.html
+++ b/public/index.html
@@ -1575,14 +1575,19 @@
 			}))
 		}
 
+		function shiftTimestampByTimezone(timestamp, tzOffset) {
+			return timestamp - tzOffset * 3600 * 1000 + new Date().getTimezoneOffset() * 60 * 1000
+		}
+
 		function renderHeatmap(startDate, endDate, tzOffset, timeline) {
 			document.getElementById("heatmapContainer").innerHTML = ""
 
 			const colors = ["#321b37", "#3b2142", "#45284e", "#4e2e5a", "#563465", "#5e3b70", "#65417b", "#6c4786", "#724e92", "#78549e", "#7d5baa", "#7a65b5", "#7072bd", "#637fc1", "#558cc2", "#5095c2", "#599bc5", "#62a0c9", "#6ba6cc", "#74abd0", "#7eb0d3", "#8cb4d7", "#99b8d9", "#a4bcdb", "#afc0dd", "#b9c4de", "#c8c6e3", "#d7c8e5", "#e5cae4", "#f0cee0", "#fad3db"]
 			const days = []
 			const dt = new Date(startDate.getTime())
-			dt.setUTCHours(tzOffset,0,0,0)
-			for(;dt<=new Date(endDate.getTime());dt.setUTCDate(dt.getUTCDate()+1)) {
+			dt.setHours(dt.getHours() - tzOffset + dt.getTimezoneOffset()/60,0,0,0)
+			dt.setHours(0)
+			for(;dt<=new Date(endDate.getTime());dt.setDate(dt.setDate()+1)) {
 				if(dt.getTime() - startDate.getTime() === -86400000) continue // prevent blank days
 				days.push(new Date(dt))
 			}
@@ -1597,14 +1602,14 @@
 					const dateAt = new Date(day.getTime() + i * 3600 * 1000)
 					const dateIn1h = new Date(day.getTime() + (i + 1) * 3600 * 1000)
 
-					if(dateAt.getTime() > Date.now()) {
+					if(dateAt.getTime() > shiftTimestampByTimezone(Date.now(), tzOffset)) {
 						continue
 					}
 
 					const span = document.createElement("span")
 					span.classList.add("heatmap-item")
-					if(dateAt.getTime() >= startDate.getTime() && dateAt.getTime() < endDate && dateAt.getTime() <= Date.now()) {
-						const amountOfGames = timeline.filter(x => x.timestamp.getTime() >= dateAt.getTime() && x.timestamp.getTime() < dateIn1h.getTime()).length
+					if(dateAt.getTime() >= shiftTimestampByTimezone(startDate.getTime(), tzOffset) && dateAt.getTime() < shiftTimestampByTimezone(endDate.getTime(), tzOffset) && dateAt.getTime() <= shiftTimestampByTimezone(Date.now(), tzOffset)) {
+						const amountOfGames = timeline.filter(x => shiftTimestampByTimezone(x.timestamp.getTime(), tzOffset) >= dateAt.getTime() && shiftTimestampByTimezone(x.timestamp.getTime(), tzOffset) < dateIn1h.getTime()).length
 						span.textContent = amountOfGames
 						span.style.backgroundColor = colors[Math.min(amountOfGames, colors.length-1)]
 						span.style.color = amountOfGames === 0 ? "#ffffff": "#000000"
