fix(heatmap): translate end date to the target timezone properly

--- a/public/index.html
+++ b/public/index.html
@@ -1587,7 +1587,7 @@
 			const dt = new Date(startDate.getTime())
 			dt.setHours(dt.getHours() - tzOffset + dt.getTimezoneOffset()/60,0,0,0)
 			dt.setHours(0)
-			for(;dt<=new Date(endDate.getTime());dt.setDate(dt.getDate()+1)) {
+			for(;dt<=new Date(shiftTimestampByTimezone(endDate.getTime(), tzOffset));dt.setDate(dt.getDate()+1)) {
 				if(dt.getTime() - startDate.getTime() === -86400000) continue // prevent blank days
 				days.push(new Date(dt))
 			}
